@@ -64,6 +64,8 @@ include::toint.asciidoc[]
 
 include::tofloat.asciidoc[]
 
+include::tostring.asciidoc[]
+
 :leveloffset: 1
 
 [[query-functions-collection]]
